// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification can render children 1`] = `
<div>
  <div
    class="Notification"
  >
    <p>
      Content for the Notification
    </p>
  </div>
</div>
`;

exports[`Notification can render message 1`] = `
<div>
  <div
    class="Notification"
  >
    Content for the Notification
  </div>
</div>
`;
